xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/upload.css
.upload-status-container {
  position: relative;
}

.upload-status {
  position: relative;
  padding: .3em;
  padding-left: 1em;
  background-color: var(--xwiki-background-secondary-color);
  border-radius: var(--border-radius-large);
  margin: .5em .2em;
  display: flex;
  gap: 1em;
  align-items: center;
  /* We expect the first child to be the main container. The second child should be the (optional) cancel button. */
  &> *:first-child {
    flex-grow: 1;
  }
}

/* When the upload results in an error, we color code it accordingly.*/
.upload-status.upload-error {
  background-color: var(--alert-danger-bg);
  color: var(--state-danger-text);
}

/* We expect the first node child of the .result-<something> node to be its icon. */
.upload-result > div > span:first-child {
  margin-right: 1em;
}

/* Color the icons. */
.result-canceled > *:first-child {
  color: var(--state-danger-text);
}

.result-done > *:first-child {
  color: var(--brand-primary);
}

/* We display extra info only when the upload is in progress.
 We only display the result blocks when the result is achieved. */
.upload-status .upload-result > *,
.progress-info,
.upload-cancel {
  display: none;
}

.upload-done .result-done,
.upload-canceled .result-canceled,
.upload-error .result-error,
.upload-inprogress .progress-info,
.upload-inprogress .upload-cancel {
  display: inherit;
}

.upload-inprogress .progress-info progress {
  width: 100%;
  height: .5em;
  margin: .25em 0;
  border: none;
  border-radius: var(--border-radius-small);
  
  /* Firefox progress colors */
  &::-moz-progress-bar {
    background-color: var(--brand-primary);
  }
  
  background-color: var(--alert-info-bg);
  
  /* Webkit based progress colors */
  &::-webkit-progress-bar {
    border-radius: var(--border-radius-small);
    background-color: var(--alert-info-bg);
  }
  
  &::-webkit-progress-value {
    border-radius: var(--border-radius-small);
    background-color: var(--brand-primary);
  }
}

.progress-transfered, .progress-speed {
  display: none;
  color: var(--text-muted);
}

[data-xwiki-user-advanced=true] .progress-transfered,
[data-xwiki-user-advanced=true] .progress-speed {
  display: unset;
}

.upload-cancel {
  align-items: center;
  background: none;
  border-color: transparent;
  aspect-ratio: 1;
  height: fit-content;
}

.upload-inprogress .file-info .progress-info {
  margin-left: .5em;
  display: inline-flex;
  gap: .2em;
  flex-grow: 1;
}

.progress-info .file-size {
  flex-grow: 1;
}

.file-info {
  display: inline-flex;
  width: 100%;
}

.file-info .file-name {
  font-weight: var(--font-weight-semibold);
}

.file-info .buttonwrapper, .file-info .upload-canceled-label {
  float: right;
  margin: 0;
}

.progress-time {
  display: inline-flex;
  gap: .2em;
}

.upload-waiting .progress-time {
  display: none;
}

.upload-error .file-info .file-name,
.upload-error .status-icon.icon-error {
  color: var(--brand-error);
}

